--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  position: relative;
 }
 
 .main {
@@ -10,6 +10,31 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.headWrapper {
+  top: 0;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: white;
+  height: 60px;
+  z-index: 100;
+}
+
+.logoWrapper {
+  max-width: max(20%, 152px);
+  padding: 15px 4%;
+}
+
+.membershipWrapper {
+  width: 38rem;
+  padding: 15px 15px 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .footer {
@@ -112,5 +137,60 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+.jumbotron {
+  position: relative;
+  min-height: 700px;
+  /* padding: 20% 6%; */
+  width: 100%;
+  margin: 0 auto;
+  background: url('../public/static/images/resume.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-color: rgba(69, 123, 157, 0.85); */
+  color: white;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+.jumbotronContent {
+  margin-top: 30px;
+  min-height: 800px;
+  width: 100%;
+  background-color: rgba(69, 123, 157, 0.85);
+}
+
+.jumbotronDescription {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.jumbotronDescription h1 {
+  color: white;
+  /* z-index: 100; */
+  padding-top: 20%;
+  margin-bottom: 50px;
+}
+
+.jumbotronDescription p {
+  padding: 0 6%;
+  font-size: 20px;
+}
+
+.jumbotronDescription span {
+  font-size: 22px;
+  padding-top: 50px;
+  /* padding-bottom: 20%; */
+}
+
+.bannerWrapper {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 735px) {
+  .membershipWrapper {
+    display: none;
   }
 }
